Footer gap fix
fixed the black space on footer

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+.finisher-header {
+	position: relative;
+	z-index: 1;
+  }
 * {
 	font-family: "Noto Sans", sans-serif;
 	scroll-behavior: smooth;
@@ -667,7 +671,16 @@ footer {
 	width: 100%;
 	height: 200px;
 	overflow: hidden;
+	z-index: 2;
 }
+#finisher-canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+  }
 /* WAVES BACKGROUND */
 .footer-background {
 	position: absolute;
@@ -676,6 +689,7 @@ footer {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	z-index: 1;
 }
 .air {
 	position: absolute;
